# embeddings

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  Polemo2-Lighting-HPS.ipynb  README.md  docker-compose.yml  index.html  mypy.ini  poetry.toml  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
.github/workflows/: deploy-manual.yaml  deploy.yaml  ghp_deploy.yml  python_poetry.yml  python_poetry_main.yml  python_poetry_release.yml  repo_sync.yaml  test.yaml  test_docs.yaml
01_Tutorials/: baseline_sklearn_models_tutorial.html  tutorial_how_to_use_config_space.html  validate_lightning_models_inference.html
02_LEPISZCZE/: lepiszcze.html  submission.html
configs/: lightning_configspace.yaml
docker/embeddings-gpu/: Dockerfile
docker/gpu-tests/: Dockerfile
embeddings/: _modidx.py  datasets.py  defaults.py  evaluate_sequence_tagging.py  lepiszcze.py
embeddings/callbacks/: lightning_callbacks.py
embeddings/config/: base_config.py  config_space.py  flair_config.py  flair_config_space.py  lighting_config_space.py  lightning_config.py  lightning_config_space.py  optimized_config_space.py  optimized_flair_config_space.py  optimized_lighting_config_space.py  parameters.py
embeddings/data/: DataLoader.py  Dataset.py  data_collator.py  data_loader.py  datamodule.py  dataset.py  hugging_face_data_loader.py  hugging_face_dataset.py  huggingface_datamodule.py  io.py  qa_datamodule.py  text_classification_datamodule.py
embeddings/embedding/: auto_flair.py  document_embedding.py  embedding.py  flair_embedding.py  flair_loader.py  sklearn_embedding.py
embeddings/evaluator/: evaluation_results.py  evaluator.py  leaderboard.py  metrics_evaluator.py  qa_evaluator.py  question_answering_evaluator.py  sequence_labeling_evaluator.py  sequence_tagging_evaluator.py  submission.py  submission_utils.py  text_classification_evaluator.py
embeddings/hyperparameter_search/: configspace.py  flair_configspace.py  lighting_configspace.py  parameters.py  poc.py
embeddings/language_models/: long_former.py  roberta.py
embeddings/metric/: hugging_face_metric.py  lightning_seqeval_metric.py  metric.py  pos.py  pos_metric.py  prfs_per_class_metric.py  question_answering.py  seqeval_metric.py  sequence_labeling.py  unit_seqeval_metric.py
embeddings/metrics/: metrics.py  pos.py
embeddings/model/: BaseModel.py  Model.py  base_model.py  flair_model.py  lightning_model.py  model.py  sklearn_model.py  torch_models.py
embeddings/pipeline/: Pipeline.py  PipelineBuilder.py  StandardPipeline.py  __init__.py  config_space.py  evaluation_pipeline.py  flair_classification.py  flair_hps_pipeline.py  flair_pair_classification.py  flair_preprocessing_pipeline.py  flair_sequence_labeling.py  hf_preprocessing_pipeline.py  hps_pipeline.py  hugging_face_POS_tagging.py  hugging_face_classification.py  hugging_face_pair_classification.py  hugging_face_sequence_labeling.py  hugging_face_sequence_tagging.py  kwargs_group.py  lighting_hps_pipeline.py  lightning_classification.py  lightning_hps_pipeline.py  lightning_pipeline.py  (+9 more)
examples/: collect_evaluate_results.py  create_averaged_submissions_from_local_disk.py  create_averaged_submissions_from_search.py  create_avg_submission_from_local_disk.py  create_custom_submission.py  create_submissions_from_local_disk.py  create_submissions_from_search.py  evaluate_document_classification.py  evaluate_document_pair_classification.py  evaluate_hps.py  evaluate_lightning_document_classification.py  evaluate_lightning_sequence_labeling.py  evaluate_lightning_text_classification.py  evaluate_pos_tagging.py  evaluate_sequence_labelling.py  evaluate_sequence_tagging.py  hps_lightning_document_classification.py  hps_lightning_sequence_labeling.py  hypertuning_poc.py  lightning_sequence_labeling.py  lightning_text_classification.py  preprocess_evaluate_sequence_labeling.py  preprocess_sequence_labeling.py  preprocess_sequence_labelling.py
experimental/: defaults.py
experiments/: kgr10_herbert_benchmark.py
lepiszcze/: lepiszcze.html  submission.html
nbs/: 00_lepiszcze.ipynb  index.ipynb  index.qmd  nbdev.yml  references.bib  sidebar.yml
notebooks/: hyperparams_search_libs_examples.ipynb  validate_flair_models_inference.ipynb  validate_lightning_models_inference.ipynb
tests/: conftest.py  test_aggregation_embeddings.py  test_automodel.py  test_callback_best_epoch.py  test_config_space_from_yaml.py  test_embeddings.py  test_fasttext_embeddings.py  test_flair_configs.py  test_flair_inference.py  test_hf_preprocessing_pipeline.py  test_hyperparameter_search.py  test_klej_and_hf_dataset_consistency.py  test_lightning_classification_pipeline.py  test_lightning_configs.py  test_lightning_inference.py  test_lightning_question_answering_pipeline.py  test_lightning_sequence_labeling_pipeline.py  test_magnitude.py  test_model_exporter.py  test_no_dev_training.py  test_onnx_exporter.py  test_output_path_builder.py  test_pipelinebuilder.py  test_pos_tagging.py  test_pos_tagging_evaluator.py  test_preprocessing.py  test_preprocessing_evaluation_pipelines.py  test_question_answering_evaluator.py  test_question_answering_splits_transformation.py  test_rename_input_columns_transformation.py  test_rnn.py  test_sampling_transformations.py  test_seqeval_metric.py  test_seqeval_torchmetric.py  test_sequence_labelling.py  test_sequence_labelling_evaluator.py  test_sequence_tagging.py  test_sklearn_classification_pipeline.py  test_text_classification.py  test_text_pair_classification.py  (+2 more)
tutorials/: adaboost_tfidf_evaluation.json  baseline_sklearn_models_tutorial.html  baseline_sklearn_models_tutorial.ipynb  how_to_use_polsih_static_embeddings.html  how_to_use_polsih_static_embeddings.ipynb  svm_tfidf_evaluation.json  tutorial_how_to_use_config_space.html  tutorial_how_to_use_config_space.ipynb  validate_flair_models_inference.html  validate_flair_models_inference.ipynb  validate_lightning_models_inference.html  validate_lightning_models_inference.ipynb  xgb_tfidf_evaluation.json
webpage/: config.toml  netlify.toml
(+262 files in other folders)
