[tool.poetry]
name = "clarinpl-embeddings"
version = "0.0.1"
description = ""
license = "MIT"
authors = [
    "Roman Bartusiak <riomus@gmail.com>",
    "Łukasz Augustyniak <luk.augustyniak@gmail.com>",
    "Albert Sawczyn <albertsawczyn@gmail.com>",
    "Kamil Tagowski <kamil.tagowski@gmail.com>"
]
homepage = "https://github.com/CLARIN-PL/embeddings"
packages = [
    { include = "experimental" },
    { include = "embeddings" },
    { include = "experimental/**/*.py" },
    { include = "embeddings/**/*.py" },
]

[tool.poetry.dependencies]
python = ">= 3.8.0, <4.0"
annoy = { version=">=1.17.0", optional=true}
appdirs = ">=1.4.4"
datasets = ">=1.16.1"
flair = ">=0.9"
lz4 = { version=">=3.1.10", optional=true}
numpy = ">=1.20.0"
optuna = ">=2.9.1"
Pillow = ">=8.2.0"
pydantic = ">=1.8.2"
pymagnitude = { version=">=0.1.143", optional=true}
pytorch-lightning = "1.5.4"
requests = ">=2.25.1"
scikit-learn = ">=1.0.0"
seqeval = ">=1.2.2"
srsly = ">=2.4.1"
tensorboard = ">=2.4.1"
torch = ">=1.9"
transformers = ">=4.12.5"
typer = ">=0.3.2"
types-PyYAML = ">=5.4.10"
typing-extensions = ">=4.0.1"
xgboost = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "21.12b0"
isort = { version = "5.10.1", extras = ["pyproject"] }
mypy = "0.920"
poethepoet = "0.11.0"
pyflakes = "2.4.0"
pytest = "6.2.5"
types-requests = "2.26.1"
coverage = {extras = ["toml"], version = "^6.2"}

[tool.poe.tasks]
black = "black --check ./"
isort = "isort .  -c"
black_fix = "black ./"
isort_fix = "isort . "
pyflakes = "pyflakes embeddings"
mypy = "mypy -p embeddings"
coverage_test = "coverage run -m pytest"
coverage_report = "coverage report -m"
test = ["coverage_test", "coverage_report"]
check = ["black", "isort", "mypy", "pyflakes"]
fix = ["black_fix", "isort_fix"]
all = ["check", "test"]

[tool.poetry.extras]
developer = ["black", "mypy", "typing-extensions"]
pymagnitude = ["pymagnitude", "lz4", "annoy"]

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--maxfail=100"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
known_first_party = "embeddings"
known_third_party = ["click", "pytest"]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "flair.*",
    "numpy",
    "sklearn.*",
    "srsly",
    "tqdm.*",
    "numpy.random",
    "huggingface_hub",
    "pandas",
    "pymagnitude",
    "spacy.*",
    "spacy",
    "appdirs",
    "dataset.arrow_dataset"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "spacy.*",
    "torch.testing",
    "torch",
    "datasets"
]
implicit_reexport = true


# due to https://github.com/huggingface/transformers/issues/13390#issuecomment-934830946
[[tool.mypy.overrides]]
module = [
    "transformers"
]
follow_imports = "skip"


[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 80
